--- a/slides/clase1.ipynb
+++ b/slides/clase1.ipynb
@@ -1550,7 +1550,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9f09b447",
    "metadata": {
@@ -1618,7 +1617,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "68e685f7",
    "metadata": {
@@ -1685,7 +1683,11 @@
   {
    "cell_type": "markdown",
    "id": "7536f5f9",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Sesgo de omisión de variables importantes  y debiasing\n",
     "\n",
@@ -1698,6 +1700,248 @@
     "- Pregunte por las alternativas y los objetivos\n",
     "- Pregunte por situaciones extremas o inusuales\n",
     "- Utilizar técnicas de elicitación en grupo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffa2da52",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo del proxy  y debiasing\n",
+    "\n",
+    " Los atributos proxy reciben mayores pesos que los respectivos objetivos fundamentales.\n",
+    " \n",
+    "**Evidencia:**  La elicitación de las ponderaciones en utilidad y valor multiatributo. \n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Evitar los atributos proxy\n",
+    "- Construir modelos que relacionen los atributos con los objetivos fundamentales y proporcionar ponderaciones para objetivos fundamentales\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5938fa7",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de Insensibilidad al rango  y debiasing\n",
+    "\n",
+    "Las ponderaciones de los objetivos no se ajustan adecuadamente a los cambios en el rango de atributos.\n",
+    "\n",
+    "\n",
+    "**Evidencia:** Elicitacin de pesos en la medida de valor de la utilidad multriatributo.\n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Hacer explícitos los rangos de atributos y utilizar procedimientos de ponderación de los mismos\n",
+    "- Utilizar procedimientos de compensación o de fijación de precios\n",
+    "- Utilizar procedimientos de elicitación múltiples y comprobaciones cruzadas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "684046d3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de Escala y debiasing\n",
+    "\n",
+    "Familia de sesgos estímulo-respuesta que comprende: sesgo de contracción, sesgo logarítmico de respuesta, sesgo de igualación de rango, sesgo de centrado, y el sesgo de igualdad de frecuencia. \n",
+    "\n",
+    "**Evidencia:** EValoración de medidas físicas y sociales de diversa índole.\n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Desarrollar escalas que coincidan con los estímulos y las respuestas, siendo conscientes de estos sesgos\n",
+    "- Elegir las técnicas de escalado técnicas apropiadas para la tarea tarea en cuestión\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc78a471",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de División  y debiasing\n",
+    "\n",
+    "Este sesgo se produce cuando la forma los objetivos se agrupan en un árbol de valores afecta a sus pesos; o la forma de podar un árbol afecta a las probabilidades colocadas en las ramas restantes.\n",
+    "\n",
+    "**Evidencia:**  Elicitación de pesos en modelos multicriterio. Obtención de probabilidades en árboles de decisión.\n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Evitar divisiones con grandes ratios de probabilidad o peso\n",
+    "- Utilizar la estimación jerárquica de los pesos o las probabilidades\n",
+    "- Utilizar juicios de proporción en lugar de de la estimación directa o distribución de puntos\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25416f44",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de Influencia del afecto y debiasing\n",
+    "\n",
+    "Este sesgo se produce cuando existe una predisposición emocional a favor o en contra de un resultado resultado u opción específica que contamina los juicios.\n",
+    "\n",
+    "**Evidencia:**  Varios estudios que evalúan el papel del afecto que provoca una relación percibida inversa entre las consecuencias positivas y negativas relacionadas con las pandemias y los peligros causados por el hombre, etc.  También hay pruebas de que el afecto influye en la estimación de las probabilidades de los acontecimientos.\n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Evitar las descripciones cargadas de consecuencias en los atributos\n",
+    "- Comprobar los juicios con con protocolos alternativos.\n",
+    "- Utilizar varios expertos con puntos de vista alternativos.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b127e9d3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de Confirmación y debiasing\n",
+    "\n",
+    "El sesgo se produce cuando hay un deseo de confirmar la propia creencia, lo que lleva a una inconsciente selectividad en la adquisición y uso de las pruebas. \n",
+    "\n",
+    "\n",
+    "**Evidencia:**  Varios escenarios experimentales, como en la obtención de información\n",
+    "tareas de selección, actualización de pruebas y evaluación de juicios propios. (79,80) También en contextos del mundo real, como el diagnóstico médico, el razonamiento judicial y el pensamiento científico\n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Utilizar múltiples expertos con diferentes puntos de vista sobre las hipótesis\n",
+    "- Desafíe las evaluaciones de probabilidad con contrafactuales\n",
+    "- Buscar pruebas de hipótesis alternativas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2132ed2",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de deseabilidad de un evento o consecuencia positiva y debiasing\n",
+    "\n",
+    "El sesgo se produce cuando la deseabilidad de un resultado conduce a un aumento de la medida en que se espera que ocurra que se produzca. También se denomina \"pensamiento deseoso\" o \"sesgo de optimismo\n",
+    "\n",
+    "**Evidencia:**  Predicción de resultados en juegos de azar; impacto en las estimaciones de probabilidades de resultados futuros en previsión de expertos; estimaciones de costos y duración en proyectos; así como así como algún posible efecto en torneos deportivos.\n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Utilizar múltiples expertos con puntos de vista alternativos\n",
+    "- Utilizar la regla de puntuación y realizar apuestas hipotéticas contra el evento o consecuencia deseada consecuencia deseada\n",
+    "- Utilizar la descomposición y evaluación realista de probabilidades parciales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4df5a86",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de indeseabilidad de un evento negativo y debiasing\n",
+    "\n",
+    "Este sesgo se produce cuando se quiere ser cauto  o conservador en las estimaciones que pueden estar relacionadas\n",
+    "con las consecuencias negativas.\n",
+    "\n",
+    "**Evidencia:**  La mayoría de las pruebas relacionadas con las probabilidades de los acontecimientos vitales; pero también en estimaciones a largo plazo de acontecimientos futuros en la previsión de expertos y en estimaciones de riesgos y beneficios sobre tecnologías de riesgo; algunas evaluaciones de riesgo que están intencionadamente sesgadas hacia estimaciones \"conservadoras\" en cada paso.\n",
+    "\n",
+    "**Estrategias**\n",
+    "- Utilizar múltiples expertos con puntos de vista alternativos\n",
+    "- Utilizar reglas de puntuación y realizar apuestas hipotéticas a favor de el evento o la consecuencia no deseada \n",
+    "- Utilizar la descomposición y evaluación realista de probabilidades parciales para estimar el suceso probabilidad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dd332e7",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de Conveniencia de opciones/elecciones y debiasing\n",
+    "\n",
+    "Este sesgo lleva a sobrestimar o subestimar las probabilidades, consecuencias, valores, o ponderaciones en una dirección que favorece una alternativa deseada. \n",
+    "\n",
+    "**Evidencia:** estimaciones sesgadas de probabilidades e impactos en la evaluación de riesgos\n",
+    "\n",
+    "**Estrategias**\n",
+    "- Utilizar el análisis con múltiples partes interesadas que aporten diferentes perspectivas de valor\n",
+    "- Utilizar múltiples expertos con diferentes opiniones\n",
+    "- Utilizar incentivos y niveles adecuados de responsabilidad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "063ce26e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de Aversión a la ambigüedad/Paradoja de Ellsberg y debiasing\n",
+    "\n",
+    "La gente tiende a preferir los juegos de azar con probabilidades explícitas sobre los juegos con con probabilidades difusas o no especificadas.\n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Modelar y cuantificar la ambigüedad como una distribución de probabilidad\n",
+    "- Modelar como incertidumbre paramétrica (por ejemplo, sobre el parámetro de sesgo de un proceso de Bernoulii) o como distribución de probabilidad secundaria\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61b18270",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## ¿Dónde nos pega el sesgo?\n",
+    "\n",
+    "Identificación de alternativas \n",
+    "- Sesgo de influencia del afecto (M)\n",
+    "- Sesgo de anclaje (C)\n",
+    "- Sesgo de disponibilidad (C)\n",
+    "- Sesgo de deseabilidad de las opciones (M)\n",
+    "- Sesgo de representación miope del problema (C)\n",
+    "- Sesgo de omisión (C) \n",
+    "\n",
+    "\n",
+    "Provocación de alternativas; uso de objetivos para generar alternativas; uso de procesos de grupo; estimulación de la creatividad."
    ]
   },
   {
