--- a/slides/clase1.ipynb
+++ b/slides/clase1.ipynb
@@ -306,6 +306,7 @@
     "\n",
     "\n",
     " En este caso $d(x_1)< d(x_2)$\n",
+    " \n",
     " $x_2$ es preferible a $X_1$\n"
    ]
   },
@@ -674,6 +675,7 @@
     "![image.png](attachment:image.png)\n",
     "\n",
     "Proponen un modelo alternativo \n",
+    "\n",
     "**Modelo de utilidad esperada:** dónde las probabilidades bajas son sobre estimadas y las altas subestimadas.\n"
    ]
   },
@@ -1562,7 +1564,7 @@
     "\n",
     "El sesgo se produce cuando la estimación de un valor numérico se basa en un valor inicial (ancla), que luego se no se ajusta lo suficiente para proporcionar la respuesta final\n",
     "\n",
-    "**Evidencia:** Tareas de esimación, deciciones de precios y negociaciones\n",
+    "**Evidencia:** Tareas de estimación, decisiones de precios y negociaciones\n",
     "\n",
     "**Estrategias** \n",
     "\n",
@@ -1627,7 +1629,7 @@
    "source": [
     "### Sesgo de igualación y debiasing\n",
     "\n",
-    "Este sesgo se produce cuando los responsables de la toma de decisiones asignan pesos similares a todos los objetivos (17) o probabilidades similares probabilidades similares a todos los eventos\n",
+    "Este sesgo se produce cuando los responsables de la toma de decisiones asignan pesos similares a todos los objetivos o probabilidades similares probabilidades similares a todos los eventos.\n",
     "\n",
     "\n",
     "**Evidencia:** Explicitación de probabilidades en árboles de decisión y elicitación de pesos en los árboles de valores.\n",
@@ -1649,7 +1651,7 @@
    "source": [
     "### Sesgo de presentar en términos de ganancia o pérdida y debiasing\n",
     "\n",
-    "Este sesgo se produce cuando las descripciones alternativas de una elección y sus resultados (44), ya sea como ganancias o como pérdidas, y puede llevar a respuestas diferentes.\n",
+    "Este sesgo se produce cuando las descripciones alternativas de una elección y sus resultados, ya sea como ganancias o como pérdidas, y puede llevar a respuestas diferentes.\n",
     "\n",
     "**Evidencia:** Varias áreas que implican la elección de opciones arriesgadas, la evaluación de una única opción sobre un atributo, y la forma en que se consecuencias se describen para promover una elección\n",
     "\n",
@@ -1737,7 +1739,7 @@
     "Las ponderaciones de los objetivos no se ajustan adecuadamente a los cambios en el rango de atributos.\n",
     "\n",
     "\n",
-    "**Evidencia:** Elicitacin de pesos en la medida de valor de la utilidad multriatributo.\n",
+    "**Evidencia:** Elicitación de pesos en la medida de valor de la utilidad multriatributo.\n",
     "\n",
     "**Estrategias**\n",
     "\n",
@@ -1759,7 +1761,7 @@
     "\n",
     "Familia de sesgos estímulo-respuesta que comprende: sesgo de contracción, sesgo logarítmico de respuesta, sesgo de igualación de rango, sesgo de centrado, y el sesgo de igualdad de frecuencia. \n",
     "\n",
-    "**Evidencia:** EValoración de medidas físicas y sociales de diversa índole.\n",
+    "**Evidencia:** Valoración de medidas físicas y sociales de diversa índole.\n",
     "\n",
     "**Estrategias**\n",
     "\n",
@@ -1971,9 +1973,7 @@
     "En algunas tareas de estimación bayesiana, las personas no revisan suficientemente sus probabilidades tras recibir información sobre los acontecimientos que se están considerando.\n",
     "\n",
     "**Estrategias**\n",
-    "- Descomponer la t- Demuestre la lógica de que los precios máximos de compra y los precios mínimos de venta deben converger\n",
-    "- Demuestre la lógica de la simetría de las ganancias y pérdidas\n",
-    "- No incluir el coste hundido en el análisisarea en una estimación de probabilidades "
+    "- Descomponer la tarea en una estimación de probabilidades previas."
    ]
   },
   {
@@ -2015,12 +2015,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66a3b3b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "1dbbeaeb",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de insensibilidad al tamaño de la muestra  y debiasing\n",
+    "\n",
+    "Según las leyes de la probabilidad, las medias o proporciones extremas son menos en muestras grandes que en muestras pequeñas.\n",
+    "La gente tiende a ignorar el tamaño de la muestra y considerar los extremos igual de probables en muestras muestras grandes.\n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Utilizar la estadística para determinar la probabilidad de resultados extremos en muestras de distintos tamaños\n",
+    "- Utiliza los datos de la muestra y demuestra cómo y por qué los estadísticos extremos son lógicamente menos probables para muestras más grandes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eec0045",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de  predicción no regresiva y debiasing\n",
+    "\n",
+    "Cuando dos variables X e Y están imperfectamente correlacionadas, la estimación condicional de Y, dado un valor específico de X, debería hacer una regresión hacia la media de Y.\n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Utilizar directamente las estadísticas\n",
+    "- Si los datos son insuficientes, descomponer la tarea en una estimación de las desviaciones estándar y la correlación y luego calcular la línea de regresión"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68a28091",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sesgo de subaditividad/ superaditividad y debiasing\n",
+    "\n",
+    "Al juzgar los sub-sucesos individuales, la suma de las probabilidades suele ser sistemáticamente más pequeña o más grande que la probabilidad estimada directamente directamente estimada del acontecimiento total. Esto es así incluso en el caso de sucesos mutuamente excluyentes; para detalles. \n",
+    "\n",
+    "**Estrategias**\n",
+    "\n",
+    "- Explicar la lógica de la aditividad de los sucesos mutuamente excluyentes\n",
+    "- Además, se puede empezar obteniendo cocientes de las probabilidades de los subeventos y aplicando los cocientes a la probabilidad del evento total"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2043,6 +2093,92 @@
     "\n",
     "\n",
     "Provocación de alternativas; uso de objetivos para generar alternativas; uso de procesos de grupo; estimulación de la creatividad."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b7cafb7",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## ¿Dónde nos pega el sesgo?\n",
+    "\n",
+    " Identificación de eventos y resultados \n",
+    " \n",
+    "- Sesgo de disponibilidad (C)\n",
+    "- Sesgo de confirmación (M)\n",
+    "- Sesgo de representación miope del problema (C)\n",
+    "- Sesgo de omisión (C)\n",
+    "- Sesgo de exceso de confianza (C) \n",
+    "\n",
+    "Pedir contrafactuales; utilizar múltiples expertos; adoptar procesos de grupo; solicitar hipótesis alternativas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "954656d0",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## ¿Dónde nos pega el sesgo?\n",
+    "\n",
+    "\n",
+    "Evaluación de las probabilidades \n",
+    "- Sesgo de influencia del afecto (M)\n",
+    "- Sesgo de anclaje (C)\n",
+    "- Sesgo de disponibilidad (C)\n",
+    "- Sesgo de confirmación (M)\n",
+    "- Sesgo de deseabilidad (M)\n",
+    "- Sesgo de igualación (C)\n",
+    "- Sesgo de ganancia y pérdida (C)\n",
+    "- Sesgo de exceso de confianza (C)\n",
+    "- Sesgo de división (C) \n",
+    "\n",
+    "Evitar los anclajes iniciales; utilizar técnicas de ratio de relación, no de puntos; utilizar valores fijos no probabilidades fijas; pedir contrafactuales y alternativas que compitan para crear hipótesis alternativas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ad78a8d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## ¿Dónde nos pega el sesgo?\n",
+    "\n",
+    "\n",
+    "Estimación de las consecuencias \n",
+    "\n",
+    "- Sesgo de influencia del afecto (M)\n",
+    "- Sesgo de anclaje (C)\n",
+    "- Sesgo de deseabilidad (M)\n",
+    "- Sesgo de exceso de confianza (C)\n",
+    "- Sesgos de escala (C)\n",
+    "- Sesgo de división \n",
+    "\n",
+    "Utilizar el modelo y los datos para la estimación evitar los anclajes; pedir contrafactuales; uso de apuestas hipotéticas hipotéticos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6edea18",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\n",
+    "El análisis de decisiones y riesgos se diseñó para mejorar el juicio y la toma de decisiones. Estos campos están estrechamente relacionados con la investigación cognitivo-conductual y se puede aprender mucho de la psicología\n",
+    "para mejorar la obtención de los componentes clave de los modelos de análisis de decisiones y riesgos. Esperamos que con la adición de un componente de investigación centrado en los aspectos motivacionales del juicio y la toma de decisiones, así como con un enfoque de investigación más sólido para el estudio de las herramientas de disminución de sesgos en este contexto, se pueda crear una rica literatura para informar tanto a los psicólogos como a los analistas de decisiones y riesgos con el fin último de mejorar la toma de decisiones."
    ]
   },
   {
