--- a/slides/clase1.ipynb
+++ b/slides/clase1.ipynb
@@ -2560,7 +2560,7 @@
     {
      "data": {
       "text/plain": [
-       "<Filter [criteria_filters={'ROE': <function <lambda> at 0x7fb079239bd0>}, ignore_missing_criteria=False]>"
+       "<Filter [criteria_filters={'ROE': <function <lambda> at 0x7fda8e93da20>}, ignore_missing_criteria=False]>"
       ]
      },
      "execution_count": 34,
@@ -4654,7 +4654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 65,
    "id": "867ceca0",
    "metadata": {
     "slideshow": {
@@ -4668,7 +4668,7 @@
        "<WeightedSumModel []>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4691,23 +4691,23 @@
        "<div class='skcresult-rank skcresult'>\n",
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_c8803\">\n",
+       "<table id=\"T_56498\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >Alternatives</th>\n",
-       "      <th id=\"T_c8803_level0_col0\" class=\"col_heading level0 col0\" >PE</th>\n",
-       "      <th id=\"T_c8803_level0_col1\" class=\"col_heading level0 col1\" >JN</th>\n",
-       "      <th id=\"T_c8803_level0_col2\" class=\"col_heading level0 col2\" >AA</th>\n",
-       "      <th id=\"T_c8803_level0_col3\" class=\"col_heading level0 col3\" >GN</th>\n",
+       "      <th id=\"T_56498_level0_col0\" class=\"col_heading level0 col0\" >PE</th>\n",
+       "      <th id=\"T_56498_level0_col1\" class=\"col_heading level0 col1\" >JN</th>\n",
+       "      <th id=\"T_56498_level0_col2\" class=\"col_heading level0 col2\" >AA</th>\n",
+       "      <th id=\"T_56498_level0_col3\" class=\"col_heading level0 col3\" >GN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_c8803_level0_row0\" class=\"row_heading level0 row0\" >Rank</th>\n",
-       "      <td id=\"T_c8803_row0_col0\" class=\"data row0 col0\" >3</td>\n",
-       "      <td id=\"T_c8803_row0_col1\" class=\"data row0 col1\" >4</td>\n",
-       "      <td id=\"T_c8803_row0_col2\" class=\"data row0 col2\" >2</td>\n",
-       "      <td id=\"T_c8803_row0_col3\" class=\"data row0 col3\" >1</td>\n",
+       "      <th id=\"T_56498_level0_row0\" class=\"row_heading level0 row0\" >Rank</th>\n",
+       "      <td id=\"T_56498_row0_col0\" class=\"data row0 col0\" >3</td>\n",
+       "      <td id=\"T_56498_row0_col1\" class=\"data row0 col1\" >4</td>\n",
+       "      <td id=\"T_56498_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_56498_row0_col3\" class=\"data row0 col3\" >1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5172,7 +5172,7 @@
     }
    ],
    "source": [
-    "from skcriteria.madm.simple import WeightedProductModel\n",
+    "from skcriteria.agg.simple import WeightedProductModel\n",
     "dec = WeightedProductModel()\n",
     "dec"
    ]
@@ -5189,23 +5189,23 @@
        "<div class='skcresult-rank skcresult'>\n",
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_4ac0f\">\n",
+       "<table id=\"T_f9a65\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >Alternatives</th>\n",
-       "      <th id=\"T_4ac0f_level0_col0\" class=\"col_heading level0 col0\" >PE</th>\n",
-       "      <th id=\"T_4ac0f_level0_col1\" class=\"col_heading level0 col1\" >JN</th>\n",
-       "      <th id=\"T_4ac0f_level0_col2\" class=\"col_heading level0 col2\" >AA</th>\n",
-       "      <th id=\"T_4ac0f_level0_col3\" class=\"col_heading level0 col3\" >GN</th>\n",
+       "      <th id=\"T_f9a65_level0_col0\" class=\"col_heading level0 col0\" >PE</th>\n",
+       "      <th id=\"T_f9a65_level0_col1\" class=\"col_heading level0 col1\" >JN</th>\n",
+       "      <th id=\"T_f9a65_level0_col2\" class=\"col_heading level0 col2\" >AA</th>\n",
+       "      <th id=\"T_f9a65_level0_col3\" class=\"col_heading level0 col3\" >GN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_4ac0f_level0_row0\" class=\"row_heading level0 row0\" >Rank</th>\n",
-       "      <td id=\"T_4ac0f_row0_col0\" class=\"data row0 col0\" >3</td>\n",
-       "      <td id=\"T_4ac0f_row0_col1\" class=\"data row0 col1\" >4</td>\n",
-       "      <td id=\"T_4ac0f_row0_col2\" class=\"data row0 col2\" >2</td>\n",
-       "      <td id=\"T_4ac0f_row0_col3\" class=\"data row0 col3\" >1</td>\n",
+       "      <th id=\"T_f9a65_level0_row0\" class=\"row_heading level0 row0\" >Rank</th>\n",
+       "      <td id=\"T_f9a65_row0_col0\" class=\"data row0 col0\" >3</td>\n",
+       "      <td id=\"T_f9a65_row0_col1\" class=\"data row0 col1\" >4</td>\n",
+       "      <td id=\"T_f9a65_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_f9a65_row0_col3\" class=\"data row0 col3\" >1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5625,23 +5625,23 @@
        "<div class='skcresult-rank skcresult'>\n",
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_54a1d\">\n",
+       "<table id=\"T_550b7\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >Alternatives</th>\n",
-       "      <th id=\"T_54a1d_level0_col0\" class=\"col_heading level0 col0\" >PE</th>\n",
-       "      <th id=\"T_54a1d_level0_col1\" class=\"col_heading level0 col1\" >JN</th>\n",
-       "      <th id=\"T_54a1d_level0_col2\" class=\"col_heading level0 col2\" >AA</th>\n",
-       "      <th id=\"T_54a1d_level0_col3\" class=\"col_heading level0 col3\" >GN</th>\n",
+       "      <th id=\"T_550b7_level0_col0\" class=\"col_heading level0 col0\" >PE</th>\n",
+       "      <th id=\"T_550b7_level0_col1\" class=\"col_heading level0 col1\" >JN</th>\n",
+       "      <th id=\"T_550b7_level0_col2\" class=\"col_heading level0 col2\" >AA</th>\n",
+       "      <th id=\"T_550b7_level0_col3\" class=\"col_heading level0 col3\" >GN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_54a1d_level0_row0\" class=\"row_heading level0 row0\" >Rank</th>\n",
-       "      <td id=\"T_54a1d_row0_col0\" class=\"data row0 col0\" >3</td>\n",
-       "      <td id=\"T_54a1d_row0_col1\" class=\"data row0 col1\" >4</td>\n",
-       "      <td id=\"T_54a1d_row0_col2\" class=\"data row0 col2\" >2</td>\n",
-       "      <td id=\"T_54a1d_row0_col3\" class=\"data row0 col3\" >1</td>\n",
+       "      <th id=\"T_550b7_level0_row0\" class=\"row_heading level0 row0\" >Rank</th>\n",
+       "      <td id=\"T_550b7_row0_col0\" class=\"data row0 col0\" >3</td>\n",
+       "      <td id=\"T_550b7_row0_col1\" class=\"data row0 col1\" >4</td>\n",
+       "      <td id=\"T_550b7_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_550b7_row0_col3\" class=\"data row0 col3\" >1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
